--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,10 +14,10 @@
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// This can be used to network with other containers or with the host.
-	"forwardPorts": [3000, 5432],
+	"forwardPorts": [5432],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "npm install && npm create-t3-app@latest [app] --noGit --CI --trpc --nextAuth --tailwind --drizzle --appRouter --dbProvider postgres",
+	// "postCreateCommand": "npm install",
 
   	// Configure tool-specific properties.
   	"customizations": {
